gitops/jenkins/deployments/jenkins-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: middleware-jenkins-redirect-https
  namespace: jenkins
spec:
  redirectScheme:
    scheme: https
    permanent: true
    port: "443"
