gitops/jenkins/deployments/jenkins-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service
  namespace: jenkins
spec:
  type: ClusterIP
  ports:
  - port: 443
    targetPort: 443
  selector:
    app: jenkins
