gitops/jenkins/deployments/jenkins-ingressroute-http.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: jenkins-ingressroute-http
  namespace: jenkins
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - web
  routes:
  - kind: Rule
    match: Host(`jenkins.jed.local`)
    services:
    - name: jenkins-service
      port: 8080
    middlewares:
    - name: middleware-jenkins-redirect-https
      namespace: jenkins
