gitops/jenkins/deployments/jenkins-ingressroutetcp.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: jenkins-ingressroutetcp
  namespace: jenkins
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - dashboard
  routes:
  - match: HostSNI(`jenkins.jed.local`)
    services:
    - name: jenkins-service
      port: 8080
  tls:
    secretName: jenkins-ingress
    passthrough: false
#    options:                    # [16]
#      name: opt                 # [17]
#      namespace: default        # [18]
#    certResolver: foo           # [19]
#    domains:                    # [20]
#    - main: example.net         # [21]
#      sans:                     # [22]
#      - a.example.net
#      - b.example.net
#    passthrough: false          # [23]
